--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "express-handlebars-sections": "^1.0.1",
     "express-mysql-session": "^1.2.0",
     "express-session": "^1.15.2",
+    "fs": "0.0.1-security",
+    "mime": "^1.3.6",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
     "mustache": "^2.3.0",
+    "mv": "^2.1.1",
     "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "q": "^1.5.0",
